Small changes to flask, docs
about page documentation using obsidian instead of plain html

--- a/drafts/alberto/archivedhtml/about.html
+++ b/drafts/alberto/archivedhtml/about.html
@@ -17,16 +17,16 @@
 <body>
 <div class="main">
     <div class="left-column">
-        <h2>IAH Flight Delays</h2>
+        <h2>IAH Flight Delay Explorer</h2>
         <p>IAH Flight Delays is a web app where you can summarize and compare the Statistical flights delay data over in 2022  in a
             visual manner using our dynamic charts. We use the data from the <a
                     href="https://www.transtats.bts.gov/ontime/departures.aspx" target="_blank"
                     rel="noreferrer">Datasets</a> on <a href="https://www.transtats.bts.gov/" target="_blank"
-                                                                rel="noreferrer">bureau of transportation statistics</a> and created the plots based
+                    rel="noreferrer">bureau of transportation statistics</a> and created the plots based
             on yearly data for flight delays for 2022. 
         </p>
     </div>
-    <div class="">
+    <div class="left-column">
         <img src="../docs/img/airport.png" height="300" width="300">
     </div>
 </div>
